--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
 
 - title: Getting Started
   url: /getting-started/
-  excerpt: "Everything you need to know to get started with Skinny Bones and Jekyll."
+  excerpt: "Everything you need to know to get started with Kun Li and Jekyll."
   image: 400x250.gif
 
 - title: Sample Articles
@@ -17,5 +17,5 @@
 
 - title: About
   url: /about/
-  excerpt: "All about Skinny Bones for Jekyll."
+  excerpt: "All about Kun Li for Jekyll."
   image: 400x250.gif
