--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: "A lightweight site starter for Jekyll"
 logo: 120x120.gif
 teaser: 400x250.gif
 locale: en_US
-url: "https://likundec.github.io/"
+url: "https://likundec.github.io"
 feed:
   path: atom.xml
 
