--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -3,7 +3,7 @@
 - title: Home
   url: /
 
-- title: Getting Started
+- title: Weibo <i class="fa fa-weibo" aria-hidden="true"></i>
   url: /getting-started/
 
 - title: About
