--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -3,8 +3,8 @@
 - title: Home
   url: /
 
-- title: Weibo <i class="fa fa-weibo" aria-hidden="true"></i>
-  url: /getting-started/
+- title: <a href="https://weibo.com/2350107911/profile?topnav=1&wvr=6&is_all=1">Weibo <i class="fa fa-weibo" aria-hidden="true"></i> </a>
+  url: 
 
 - title: About
   url: /about/
