--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,7 +1,7 @@
 # Footer navigation links
 
-- title: Home
-  url: /
+- title: Mail <i class="fa fa-mail-reply" aria-hidden="true"></i> 
+  url: "Mailto:ghsau@163.com"
 
 - title: Weibo <i class="fa fa-weibo" aria-hidden="true"></i> 
   url: https://weibo.com/2350107911/profile?topnav=1&wvr=6&is_all=1
