--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ plugins:
 
 # Site owner
 owner:
-  name: "Michael Rose"
+  name: "Kun Rose"
   web: "https://mademistakes.com"
   twitter: "mmistakes"
   bio: "Just another boring, tattooed, time traveling designer."
