--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,10 +10,10 @@
   excerpt: "Examples of long form posts."
   image: cas.png
 
-#- title: Projects
-#  url: /projects/
-#  excerpt: "Examples of long form posts."
-#  image: cas.png
+- title: News
+  url: /news/
+  excerpt: "Examples of long form posts."
+  image: cas.png
 
 - title: Blog
   url: /articles/
