--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,11 @@
   excerpt: "Examples of long form posts."
   image: cas.png
 
+- title: Bio
+  url: /events/
+  excerpt: "Academic profile."
+  image: cas.png
+
 #- title: Research
 #  url: /research/
 #  excerpt: "Examples of long form posts."
@@ -18,11 +23,6 @@
 - title: Blog
   url: /articles/
   excerpt: "Examples of long form posts."
-  image: cas.png
-
-- title: Events
-  url: /events/
-  excerpt: "Examples of media posts perfect for showcasing work, photographs, etc."
   image: cas.png
 
 - title: About
