--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@
   excerpt: "Examples of long form posts."
   image: cas.png
 
-- title: Bio
+- title: Profile
   url: /Bio/
   excerpt: "Academic profile."
   image: cas.png
