--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -3,10 +3,10 @@
 - title: Address <i class="fa fa-map" aria-hidden="true"></i> 
   url: https://goo.gl/maps/Yvafm5cVoVcUYKfb6
 
-- title: Address <i class="fa-brands fa-bilibili" aria-hidden="true"></i> 
+- title: Address <i class="fa fa-bilibili" aria-hidden="true"></i> 
   url: https://space.bilibili.com/484878899
 
-- title: Weibo <i class="fa-brands fa-weibo" aria-hidden="true"></i> 
+- title: Weibo <i class="fa fa-weibo" aria-hidden="true"></i> 
   url: https://weibo.com/2350107911/profile?topnav=1&wvr=6&is_all=1
 
 - title: Wechat <i class="fa fa-wechat" aria-hidden="true"></i>
