--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,4 +1,5 @@
 # Footer navigation links
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 
 - title: Address <i class="fa fa-map" aria-hidden="true"></i> 
   url: https://goo.gl/maps/Yvafm5cVoVcUYKfb6
