--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -4,7 +4,7 @@
 - title: Address <i class="fa fa-map" aria-hidden="true"></i> 
   url: https://goo.gl/maps/Yvafm5cVoVcUYKfb6
 
-- title: Bilibili <i class="fa fa-youtube" aria-hidden="true"></i> 
+- title: Bilibili <i class="fa fa-television" aria-hidden="true"></i> 
   url: https://space.bilibili.com/484878899
 
 - title: Weibo <i class="fa fa-weibo" aria-hidden="true"></i> 
