--- a/_data/messages.yml
+++ b/_data/messages.yml
@@ -6,7 +6,7 @@ locales:
   # -------------------
   en: &DEFAULT_EN
     overview: "Overview"
-    toc: "Table of Contents"
+    #toc: "Table of Contents"
     written_by: "Written by"
     updated: "Updated"
     share: "Share on"
