--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,8 +20,8 @@
   excerpt: "Examples of long form posts."
   image: cas.png
 
-- title: Blog
-  url: /articles/
+- title: Collaborators
+  url: /Collaborators/
   excerpt: "Examples of long form posts."
   image: cas.png
 
