--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,7 +21,7 @@
   image: cas.png
 
 - title: Collaborators
-  url: /Collaborators/
+  url: /collaborators/
   excerpt: "Examples of long form posts."
   image: cas.png
 
