--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -11,4 +11,4 @@
   url: https://weibo.com/2350107911/profile?topnav=1&wvr=6&is_all=1
 
 - title: Wechat <i class="fa fa-wechat" aria-hidden="true"></i>
-  url: /about/
+  url: https://www.likun.tech/images/personalinfo/WeChatImage.png
