--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,8 +20,8 @@
 #  excerpt: "Examples of long form posts."
 #  image: cas.png
 
-- title: Collaborators
-  url: /collaborators/
+- title: Members
+  url: /members/
   excerpt: "Interns and collaborators."
   image: cas.png
 
